# aduitpilot

./: .dockerignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
apps/api/: Dockerfile  config.py  graph.py  main.py  pyproject.toml  state.py
apps/api/agents/: models.py  remote_auditor.py
apps/api/agents/prompts/: loader.py
apps/api/agents/prompts/adversarial/: production.yaml
apps/api/auth/: __init__.py  clerk.py
apps/api/db/: __init__.py  pool.py  run_migrations.sh
apps/api/db/migrations/: 0003_connector_scoped_repos.sql  0009_mock_audit_runs.sql  0010_drift_events.sql
apps/api/jobs/: client.py  queue.py  worker.py
apps/api/observability/: langfuse.py  metrics.py  posthog.py
apps/api/routes/: __init__.py  connectors.py  drift.py  mock_audit.py  scan_runs.py
apps/api/services/: drift.py  drift_worker.py  evidence_collector.py  evidence_persistence.py  gap_report.py  github_evidence.py  mock_audit_worker.py
apps/api/sse/: ai_sdk_v6.py
apps/api/tests/: test_actions.py  test_chat_auth.py  test_chat_cancel.py  test_chat_rate_limit.py  test_connectors.py  test_drift_routes.py  test_drift_service.py  test_evidence_persistence.py  test_gap_report.py  test_github_evidence.py  test_jobs_queue.py  test_langfuse_sse.py  test_mock_audit_route.py  test_mock_audit_worker.py  test_models_factory.py  test_observability_metrics.py  test_orchestrator.py  test_prompt_loader.py  test_remote_auditor.py  test_scan_runs_routes.py  test_sse_data_chunks.py
apps/auditor/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml
apps/auditor/a2a/: __init__.py  agent_card.py  tasks.py
apps/auditor/agents/: __init__.py  adversarial.py  budget.py  factory.py
apps/auditor/tests/: conftest.py  test_adversarial_parser.py  test_agent_card.py  test_budget.py  test_main_service.py
apps/web/: instrumentation-client.ts  middleware.ts  next.config.ts  package.json  vercel.json  vitest.setup.ts
apps/web/__tests__/: connector-card.test.tsx  drift-client.test.tsx  middleware.test.ts  pending-actions.test.tsx  repo-picker.test.tsx  scan-runs-client.test.tsx
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/auth/github-callback/: route.ts
apps/web/app/api/auth/github-connect/: route.ts
apps/web/app/api/connectors/[id]/: route.ts
apps/web/app/api/connectors/[id]/scoped-repos/: route.ts
apps/web/app/api/drift/events/: route.ts
apps/web/app/api/drift/run/: route.ts
apps/web/app/api/drift/status/: route.ts
apps/web/app/api/internal/forward-drift/: route.ts
apps/web/app/api/me/: route.ts
apps/web/app/api/mock-audit/: route.ts
apps/web/app/api/mock-audit/[id]/: route.ts
apps/web/app/api/mock-audit/run/: route.ts
apps/web/app/api/repos/: route.ts
apps/web/app/api/scan-runs/: route.ts
apps/web/app/api/scan-runs/[id]/: route.ts
apps/web/app/api/scan-runs/diff/: route.ts
apps/web/app/dashboard/: error.tsx  layout.tsx  page.tsx
apps/web/app/dashboard/drift/: page.tsx
apps/web/app/dashboard/mock-audit/: page.tsx
apps/web/app/dashboard/scan-runs/: page.tsx
apps/web/app/dashboard/scan-runs/[id]/: page.tsx
apps/web/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/components/: app-sidebar.tsx  connector-card.tsx  drift-client.tsx  error-boundary.tsx  header-actions.tsx  mock-audit-client.tsx  page-header.tsx  pending-actions.tsx  posthog-provider.tsx  repo-list.tsx  repo-picker.tsx  scan-chat.tsx  scan-runs-client.tsx
apps/web/components/ui/: badge.tsx
apps/web/lib/: me.ts
context/: AUDITPILOT_CONTEXT.md  AUDITPILOT_FOUNDATIONS.md
docs/: prd.md  system-design.md  user-stories.md
docs/adrs/: 0010-background-jobs-redis-streams.md  0011-langfuse-prompt-management.md  0012-public-demo-account.md  0015-repo-selection-at-scan-time.md
(+4 files in other folders)
