[project]
name = "auditpilot-api"
version = "0.1.0"
description = "AuditPilot orchestration backend — FastAPI + LangGraph 1.x + Pydantic AI"
license = { text = "Apache-2.0" }
authors = [{ name = "Tharanitharan M", email = "tharanimtharan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pydantic-ai>=1.0,<2.0",
  "langgraph>=1.0,<2.0",
  "langgraph-checkpoint-postgres>=1.0",
  "litellm>=1.50",
  "langfuse>=3.0",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-exporter-otlp-proto-http>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "posthog>=3.0",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "httpx>=0.27",
  "boto3>=1.34",
  "python-multipart>=0.0.9",
  "pyjwt[cryptography]>=2.8",
  "pyyaml>=6.0",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "fakeredis[lua]>=2.26",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# apps/api is imported as the `apps.api` namespace package from the monorepo
# root (`from apps.api.main import ...`). We never publish a wheel for this
# project; the editable install only needs the dependency resolver to run.
# `only-include = []` + `bypass-selection = true` produces a dependency-only
# wheel whose importable path is the repo root (pip's site-packages .pth file
# adds that root to sys.path for editable installs).
[tool.hatch.build.targets.wheel]
bypass-selection = true
only-include = []

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Tier-3 deferred to PLAN.md chunk 3.5.11 (Sprint 8 cleanup pass)
ignore = [
    "UP042",  # StrEnum migration — class X(str, Enum)
    "B008",   # Depends(...) in FastAPI argument defaults
    "B904",   # raise ... from err in except clauses
    "SIM117", # merge nested with statements
    "SIM105", # contextlib.suppress instead of try-except-pass
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires a live Postgres/Redis/etc. (skipped in default runs)",
]
# By default skip tests marked `integration` — opt in with `-m integration`.
addopts = "-m 'not integration'"
